--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
                 </svg>       
             </a>
 
+            Hello World
+
             <div class="menu">
                 <ul>
                     <li><a class="" onclick="closeMenu()" href="#home">Inicio</a></li>
