--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
             </div>
 
-            <div class="col-b">
+            <div id="imagem-home" class="col-b">
                 <img src="imagens/dafa10.png" alt="Mulher negra sorridente">
             </div>
 
